Frontend Features: Further fix to alignment

--- a/common/css/admin.css
+++ b/common/css/admin.css
@@ -1243,7 +1243,7 @@ tr.opened .ppc-nav-menu-expand svg {
   display: inline-flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  width: 99.9%;
+  width: 99.8%;
 }
 
 .ppc-button-group label {
